--- a/assets/css/3-modules/_form.scss
+++ b/assets/css/3-modules/_form.scss
@@ -9,7 +9,7 @@
         @include main.FlexBetCen;
         flex-wrap: wrap;
     }
-    
+
     & .margin {
         margin-bottom: 25px;
     }
@@ -17,79 +17,78 @@
 }
 
 .inputs select,
-.inputs input, 
+.inputs input,
 .inputs textarea {
-      -webkit-appearance: none !important;
-      -moz-appearance:     none !important;
-      padding: reset.toRem(18) reset.toRem(16);
-      font-size: reset.toRem(15);
-      border-radius: 35px;
-      background:none;
-      border: 2px solid #f3f3f3;
-      outline: none;
-      color: #9f9f9f;
-      font-weight: 300;
-      font-family: 'Poppins', sans-serif;
-      transition: all 0.5s ease;
-  }
-  
-  .inputs textarea:focus,
-  .inputs select:focus,
-  .inputs input:focus {
-      border:2px solid #0a307d;
-  }
-  
-  .inputs select {
-    background:#efefef url("../img/seta_form.png") right 20px center no-repeat;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    padding: reset.toRem(18) reset.toRem(16);
+    padding-left: 25px;
+    font-size: reset.toRem(15);
+    border-radius: 100px;
+    height: 55px;
+    width: 100%;
+    background: none;
+    border: solid 1px main.$ColorOne;
+    outline-color: main.$ColorMain;
+    color: #9f9f9f;
+    font-weight: 300;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.5s ease;
+
+}
+
+.inputs textarea:focus,
+.inputs select:focus,
+.inputs input:focus {
+    border: 2px solid main.$ColorMain;
+}
+
+.inputs select {
+    background: #efefef url("../img/seta_form.png") right 20px center no-repeat;
     width: 100%;
     padding: 13px 25px;
     cursor: pointer;
-  }
+}
 
-  .inputs .btn {
+.inputs .btn {
     width: 100%;
     display: flex;
     justify-content: end;
-  }
+}
 
-  .inputs .btn input[type="submit"] {
-      border:none;
-      outline: none;
-      cursor:pointer;
-      margin: 20px 0 0 0;
-      transition: all 0.3s ease;
-      font-family: 'Poppins', sans-serif;
-      background: main.$ColorTwo;
-      color: #fff;
-      display: inline-block;
-      padding: reset.toRem(18) reset.toRem(16);
-      font-size: reset.toRem(18);
-      font-weight: 400;
-      margin-top: 20px;
-      min-width: 150px;
-      border:3px solid transparent;
-      border-radius:10px;
+.inputs .btn input[type="submit"] {
+    text-align: center;
+    padding: 0;
+    height: 45px;
+    background: main.$ColorMain 0% 0% no-repeat padding-box;
+    box-shadow: 0px 15px 30px main.$ColorMain;
+    font-size: reset.toRem(14);
+    font-weight: 600;
+    color: main.$ColorThree;
+    border: none;
+    padding-left: 0!important;
+    cursor: pointer;
+    letter-spacing: 0.5px;
+    border-radius: 18px;
 
-      &:hover {
-        border:3px solid main.$ColorTwo;
-        background: main.$ColorOne;
-        color:#ffffff;
+    &:hover {
+        background: main.$ColorMain2;
+        box-shadow: 0px 1px 8px main.$ColorMain2;
     }
-  }
-  
-  
-/* TABLET - 600px*/ 
+}
+
+/* TABLET - 600px*/
 @include main.breakpoint(smashTablet) {
     .inputs {
         & .margin {
-            width: 100%!important;
+            width: 100% !important;
             margin-bottom: 20px;
         }
     }
 
     .inputs select,
-    .inputs input[type="text"], 
+    .inputs input[type="text"],
     .inputs textarea {
-          padding: 12px 30px;
-      }
+        padding: 12px 30px;
+    }
 }
